--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "react-native-modal": "^7.0.2",
     "react-native-progress-circle": "^2.0.1",
     "react-native-randombytes": "^3.5.0",
+    "react-native-scaling-drawer": "^1.0.1",
+    "react-native-side-menu": "^1.1.3",
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-tcp": "git://github.com/Airbitz/react-native-tcp.git#c6af8f728fcbbae23d20c0211fd5b6c322f7a446",
     "react-native-vector-icons": "^6.1.0",
