--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -167,6 +167,7 @@ configurations.all {
 }
 
 dependencies {
+    compile project(':herc-edge-login-ui-rn')
     compile project(':edge-login-ui-rn')
     compile project(':react-native-geolocation-service')
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -181,8 +182,6 @@ dependencies {
     implementation project(':react-native-randombytes')
     implementation project(':react-native-fs')
     implementation project(':react-native-fast-crypto')
-    //implementation project(':herc-edge-login-ui-rn')
-    implementation project(':edge-login-ui-rn')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation "com.facebook.react:react-native:+"  // From node_modules
