--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'HERC'
+include ':herc-edge-login-ui-rn'
+project(':herc-edge-login-ui-rn').projectDir = new File(rootProject.projectDir, '../node_modules/herc-edge-login-ui-rn/android')
 include ':edge-login-ui-rn'
 project(':edge-login-ui-rn').projectDir = new File(rootProject.projectDir, '../node_modules/edge-login-ui-rn/android')
 include ':herc-edge-login-ui-rn'
