--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,7 +105,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "0.9.5"
         multiDexEnabled true
         ndk {
             abiFilters "armeabi-v7a", "x86"
@@ -167,9 +167,9 @@ configurations.all {
 }
 
 dependencies {
+    compile project(':react-native-camera')
     compile project(':herc-edge-login-ui-rn')
     compile project(':edge-login-ui-rn')
-    compile project(':react-native-geolocation-service')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation project(':react-native-device-info')
     implementation project(':react-native-linear-gradient')
@@ -188,6 +188,10 @@ dependencies {
     implementation "com.android.support:support-annotations:27.1.1"
     implementation "com.android.support:design:27.1.1"
     implementation "com.android.support:recyclerview-v7:27.1.1"
+    implementation(project(':react-native-geolocation-service')) {
+        exclude group: 'com.google.android.gms', module: 'play-services-location'
+    }
+    implementation "com.google.android.gms:play-services-location:16.0.0"
 }
 
 // Run this once to be able to run the application with BUCK
