--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'HERC'
+include ':react-native-camera'
+project(':react-native-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera/android')
 include ':herc-edge-login-ui-rn'
 project(':herc-edge-login-ui-rn').projectDir = new File(rootProject.projectDir, '../node_modules/herc-edge-login-ui-rn/android')
 include ':edge-login-ui-rn'
