--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-jest": "22.4.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.3",
